# Laser-Guided-Weld-Seam-Tracking

./: .gitignore  README.md  calibrateCamera.py  getBaseHight.py  getTriangleRatio.py  main_methods.py  pyproject.toml  requirements.txt  usingCamera.py  usingVideo.py  utils.py  棋盘格标定脚本.py  获取高度偏移公式.py  获得激光基础高度.py
data/: base_laser_points.npy  base_lut.npy  camera_params.npz  config.json  weld_log.csv
tests/: conftest.py  test_calibrate.py  test_main_methods.py  test_utils.py
weld_vision_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
